@@ -773,6 +773,11 @@
             parserID="org.eclipse.cdt.core.MachO"
             id="MachOBinaryParserPage">
       </parserPage>
+      <parserPage
+            class="org.eclipse.cdt.ui.dialogs.GNUSomBinaryParserPage"
+            parserID="org.eclipse.cdt.core.SOM"
+            id="SomBinaryParserPage">
+      </parserPage>
    </extension>
    <extension
          point="org.eclipse.ui.workingSets">
